Modified footer to prevent overlap

--- a/upcoming-sales-website/src/assets/Footer.module.css
+++ b/upcoming-sales-website/src/assets/Footer.module.css
@@ -13,7 +13,7 @@
     align-items: center;
     gap: 20px; /* Space between items */
     color: #333; /* Darker text color */
-    margin-top: 5px
+    margin-top: 5px;
 }
 
 .footerItem {
